# perch

./: .gitignore  Dockerfile  README.md  active_learning.ipynb  agile_modeling.ipynb  analysis.ipynb  download_and_prepare_evaluation_data.sh  embed_audio.ipynb  pyproject.toml  search_embeddings.ipynb  separate.py
.github/: install_colab_deps.py
.github/workflows/: ci.yml  ci_no_jaxtrain.yml  ci_pip.yml
birb/: __init__.py  audio_utils.py  config_utils.py  download_and_prepare_evaluation_data.sh  export_utils.py  path_utils.py  signal.py
birb/configs/: README.md  baseline_mel_conformer.py  config_globals.py  eval_protocol_v1_base.py  eval_protocol_v2_base.py  hubert_base_pq_reload_hubert.py  hubert_base_pq_supervised_finetuning.py  hubert_base_pq_with_intermediate.py  hubert_base_rq.py  hubert_frozen_quantizer.py  hubert_large_pq.py  hubert_presets.py  mae.py  presets.py  quantizer_pq.py  sample_eval_protocol_v1_config.py  sample_eval_protocol_v2_config.py  separator.py
birb/data/: filter_scrub_utils.py  sampling_utils.py  tfds_builder.py  tfds_features.py  utils.py
birb/eval/: callbacks.py  eval.py  eval_lib.py
birb/models/: audio_layers.py  class_average.py  conformer.py  cwt.py  efficientnet.py  frontend.py  handcrafted_features.py  hubert.py  layers.py  mae.py  metrics.py  output.py  quantizers.py  separation_model.py  soundstream_unet.py  taxonomy_model.py
birb/preprocessing/: pipeline.py
birb/projects/: main.py
birb/taxonomy/: annotations.py  class_utils.py  generators.py  namespace.py  namespace_db.py
birb/tests/: audio_utils_test.py  bird_taxonomy_test.py  conformer_test.py  efficientnet_test.py  fake_dataset.py  filter_scrub_test.py  frontend_test.py  inference_test.py  layers_test.py  mae_test.py  metrics_test.py  namespace_db_test.py  pooling_test.py  quantizers_test.py  signal_test.py  soundevents_test.py  soundscapes_lib_test.py  soundscapes_test.py  taxonomy_model_test.py  train_test.py
birb/train/: classifier.py  mae.py  utils.py
chirp/: __init__.py  active_learning.ipynb  adapt.py  audio_utils.py  config_utils.py  embed_audio.ipynb  export_utils.py  hubert_eval_main.py  hubert_main.py  hubert_train.py  leakr_file_type_recipe.ftrcp  mae_main.py  mae_train.py  main.py  path_utils.py  sep_main.py  sep_train.py  sfda_main.py  signal.py  train.py  train_utils.py
chirp/birb_sep_paper/: README.md  audio_ops.py  beam_index.py  beam_inference.py  data_tools.py  dataset_info.py  model_utils.py  pcen_ops.py  requirements.txt  taxonomy.py
chirp/configs/: baseline.py  baseline_attention.py  baseline_conformer.py  baseline_effnet_v2.py  baseline_mel_conformer.py  combined_reefs_birds.py  config_globals.py  eval_mvp_base.py  eval_mvp_config.py  eval_protocol_v1_base.py  eval_protocol_v1_config.py  eval_protocol_v1_separatortf.py  eval_protocol_v2_base.py  hubert_base.py  hubert_base_pq.py  hubert_base_pq_eval.py  hubert_base_pq_omit_earlyfs.py  hubert_base_pq_raw.py  hubert_base_pq_reload_hubert.py  hubert_base_pq_removeln.py  hubert_base_pq_semisupervised_finetuning.py  hubert_base_pq_supervised_finetuning.py  hubert_base_pq_with_intermediate.py  hubert_base_rq.py  hubert_eval.py  hubert_frozen_quantizer.py  hubert_large_pq.py  hubert_large_pq_removeln.py  hubert_presets.py  hubert_tiny.py  mae.py  mae_finetune.py  multidataset_classifier.py  oracle.py  presets.py  quantizer_pq.py  sample_eval_mvp_config.py  sample_eval_protocol_v1_config.py  separator.py  sfda_baseline.py  (+1 more)
chirp/crawl/: inaturalist.py  inaturalist.sh  xeno_canto.py
chirp/data/: data_processing_ops.py  filter_scrub_utils.py  pipeline.py  sampling_utils.py  scrape_xeno_canto.py  tfds_builder.py  tfds_features.py  utils.py  xeno_canto.py
chirp/eval/: README.md  callbacks.py  eval.py  eval_lib.py
chirp/google/: colab_utils.py  create_placeholder_dataset.py  xm_launch.py
chirp/inference/: README.md  a2o_utils.py  active_learning.ipynb  baw_utils.py  call_density.py  colab_utils.py  embed.py  embed_audio.ipynb  embed_lib.py  interface.py  models.py  scann_search.py  scann_search_lib.py  search_embeddings.ipynb  tf_examples.py
chirp/models/: audio_layers.py  class_average.py  cmap.py  conformer.py  cwt.py  efficientnet.py  efficientnet_v2.py  filter_bank.py  frontend.py  handcrafted_features.py  heads.py  hubert.py  layers.py  leaf.py  mae.py  metrics.py  output.py  perch_2.py  pooling.py  quantizers.py  rank_based_metrics.py  separation_model.py  soundstream_unet.py  taxonomy_model.py  (+1 more)
kakapo/: __init__.py
perch/: active_learning.ipynb  audio_utils.py  embed_audio.ipynb  signal.py
tests/: test_kakapo.py
(+541 files in other folders)
