[tool.poetry]
name = "chirp"
version = "0.1.0"
description = "A bioacoustics research project."
authors = ["Chirp Team <chirp-bio@google.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
# These dependencies are part of the implicit 'main' group, meaning
# they will be installed when using `pip install`.
# Other dependency groups will not be installed by pip, however.
# See: https://python-poetry.org/docs/managing-dependencies/#dependency-groups
python = ">=3.10,<3.12"
perch_hoplite = {git = "https://github.com/google-research/perch-hoplite.git@0.1.1"}
apache-beam = {version = "^2.50.0", extras = ["gcp"]}
chex = "^0.1.7"
clu = "^0.0.12"
jax = "^0.6"
flax = "^0.10"
imageio = "^2.5.0"
ipywidgets = "^8.1"
optax = ">=0.2.3"
matplotlib = "^3.6.1"
notebook = "^7.0.4"
pandas = {version = "^2.1.1", extras=["gcp"]}
numpy = ">=2.0,<2.1"
SPARQLWrapper = "^2.0.0"
tqdm = "^4.6"
tensorflow = "^2.20"
tf-keras = "^2.20"

[tool.poetry.group.jaxtrain]
optional = true

[tool.poetry.group.jaxtrain.dependencies]
# Used for crawling datasources.
ratelimiter = "^1.2.0.post0"
# Quantization-aware training in Jax.
aqtp = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
